--- a/Makefile.dist
+++ b/Makefile.dist
@@ -1,4 +1,4 @@
-ROOT_DIR = /home/ryan/git/vendor/enigmacurry/d.rymcg.tech
+ROOT_DIR = ~/git/vendor/enigmacurry/d.rymcg.tech
 VIRTUALENV_DIR=$(shell realpath virtualenv)
 
 include ${ROOT_DIR}/_scripts/Makefile.projects
