--- a/.env-dist
+++ b/.env-dist
@@ -11,6 +11,10 @@
 # The domain name for this instance of the app:
 FLASK_TEMPLATE_TRAEFIK_HOST=flask-template.example.com
 
+# Things you are only allowed to do in DEV mode:
+#  * Only in dev mode are you allowed to run `make dropdb`.
+FLASK_TEMPLATE_DEV_MODE=false
+
 ## Create a unique name for this instance of the app:
 ##`make config` will set this to `default` if you do not specify it.
 FLASK_TEMPLATE_INSTANCE=
