--- a/.env-dist
+++ b/.env-dist
@@ -50,6 +50,13 @@ FLASK_TEMPLATE_OAUTH2=
 # groups of email addresses in the `traefik` folder by running `make groups`. 
 FLASK_TEMPLATE_OAUTH2_AUTHORIZED_GROUP=
 
+# Mutual TLS (mTLS):
+# Set true or false. If true, all clients must present a certificate signed by Step-CA:
+FLASK_TEMPLATE_MTLS_AUTH=false
+# Enter a comma separated list of client domains allowed to connect via mTLS.
+# Wildcards are allowed and encouraged on a per-app basis:
+FLASK_TEMPLATE_MTLS_AUTHORIZED_CERTS=*.clients.flask-template.example.com
+
 ## You may customize the UID and GID that the container runs as, this
 ## is passed into the Dockerfile as a build ARG.
 FLASK_TEMPLATE_UID=54321
