--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - PGPASSWORD=${FLASK_TEMPLATE_POSTGRES_PASSWORD}
       - DOCKER_PROJECT=
       - API_UPLOAD_FOLDER=${FLASK_TEMPLATE_API_UPLOAD_FOLDER}
+      - API_LOG_LEVEL=${FLASK_TEMPLATE_API_LOG_LEVEL}
     volumes:
       - uploads:${FLASK_TEMPLATE_API_UPLOAD_FOLDER}
 
