--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,4 +16,4 @@ RUN pip install --no-cache-dir --upgrade -r requirements.txt
 COPY ./app app
 EXPOSE 8000
 VOLUME ${UPLOADS_FOLDER}
-CMD gunicorn --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread --bind 0.0.0.0 app:app
+CMD PYTHONUNBUFFERED=1 gunicorn --capture-output --worker-tmp-dir /dev/shm --workers=2 --threads=4 --worker-class=gthread --bind 0.0.0.0 app:app
