--- a/.env-dist
+++ b/.env-dist
@@ -2,6 +2,11 @@
 ### .env_${DOCKER_CONTEXT}_${INSTANCE} should contain your specific instance config.
 ### Use `make config` to create/update the instance config from .env-dist
 
+## Select the compose profiles to start tagged services.
+## Use 'default' to bring up the production services.
+## Use 'test' to bring up the test services.
+DOCKER_COMPOSE_PROFILES=default
+
 ## All environment variable names should use a common prefix:
 ## eg. 'FLASK_TEMPLATE_' (rename this prefix to be specific for your app.)
 ## This prefix is to be stripped, when mapped in docker-compose.yaml:
