Add CORS protection

--- a/.env-dist
+++ b/.env-dist
@@ -77,3 +77,7 @@ FLASK_TEMPLATE_POSTGRES_PASSWORD=
 FLASK_TEMPLATE_API_LOG_LEVEL=debug
 
 FLASK_TEMPLATE_API_UPLOAD_FOLDER=/uploads
+
+# Add CORS domains to allowed to interact with the API
+# "*" means to allow all domains, which is usually INSECURE!
+FLASK_TEMPLATE_API_CORS_WHITELIST=*
