--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - DOCKER_PROJECT=
       - API_UPLOAD_FOLDER=${FLASK_TEMPLATE_API_UPLOAD_FOLDER}
       - API_LOG_LEVEL=${FLASK_TEMPLATE_API_LOG_LEVEL}
+      - API_CORS_WHITELIST=${FLASK_TEMPLATE_API_CORS_WHITELIST}
     volumes:
       - uploads:${FLASK_TEMPLATE_API_UPLOAD_FOLDER}
     networks:
