--- a/docker-compose.instance.yaml
+++ b/docker-compose.instance.yaml
@@ -17,6 +17,7 @@
 #@ authorized_group = data.values.authorized_group
 #@ enable_mtls_auth = data.values.enable_mtls_auth == "true"
 #@ mtls_authorized_certs = data.values.mtls_authorized_certs
+#@ api_cors_whitelist = ",".join([d if d.strip() == "*" else "https://" + d.strip() for d in data.values.api_cors_whitelist.split(',')])
 #@ enabled_middlewares = []
 
 #@yaml/text-templated-strings
@@ -37,6 +38,14 @@ services:
       #! The host matching router rule:
       - "traefik.http.routers.(@= router @).rule=Host(`(@= traefik_host @)`)"
       - "traefik.http.routers.(@= router @).entrypoints=websecure"
+
+      #@ enabled_middlewares.append("{}-cors".format(router))
+      - "traefik.http.middlewares.(@= router @)-cors.headers.accesscontrolallowmethods=GET,OPTIONS,PUT,POST,HEAD,DELETE,PATCH"
+      - "traefik.http.middlewares.(@= router @)-cors.headers.accesscontrolallowheaders=*"
+      - "traefik.http.middlewares.(@= router @)-cors.headers.accesscontrolalloworiginlist=(@= api_cors_whitelist @)"
+      - "traefik.http.middlewares.(@= router @)-cors.headers.accesscontrolmaxage=120"
+      - "traefik.http.middlewares.(@= router @)-cors.headers.addvaryheader=true"
+
       #@ enabled_middlewares.append("{}-ipallowlist".format(router))
       - "traefik.http.middlewares.(@= router @)-ipallowlist.ipallowlist.sourcerange=(@= ip_sourcerange @)"
       #@ if enable_http_auth:
